--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="allCard">
           <div class="cardOne">
             <div class="img">
-             <img src="/icons/food.png" alt="shohel">
+             <img src="/icons/food.png">
             </div>
             <div class="myText">
               <h2>Food for a family</h2>
@@ -78,7 +78,7 @@
           </div>
           <div class="cardTwo">
             <div class="img">
-              <img src="/icons/shelter.png" alt="shohel2">
+              <img src="/icons/shelter.png">
              </div>
              <div class="myText">
                <h2>Shelter for a family</h2>
@@ -87,7 +87,7 @@
           </div>
           <div class="cardThree">
             <div class="img">
-              <img src="/icons/Frame-1.png" alt="shohel3">
+              <img src="/icons/Frame-1.png">
              </div>
              <div class="myText">
                <h2>Education for a child</h2>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="right">
-           <img src="/images/donation1.jpg" alt="shohel4">
+           <img src="/images/donation1.jpg">
         </div>
       </div>
     </section>
@@ -117,7 +117,7 @@
     <section>
       <div class="leftRight">
         <div class="right">
-           <img id="leftIMG" src="/images/donation10.jpg" alt="shohel5">
+           <img id="leftIMG" src="/images/donation10.jpg">
         </div>
         <div class="left">
           <h2>their lives depend on your donation</h2>
